($Id: ChangeLog,v 1.41 2001-06-05 12:56:19 pooba53 Exp $)

2001-06-05 Dan L. (pooba53)
	* Modified configure.in so references made to $ac_prefix_default
	listed at the beginning are correct. The previous references were
	being made to $ac_default_prefix.

2001-06-01  jeff b  <jeff@univrel.pr.uconn.edu>
	* etc/afpd/quota.c: fix for Linux compile by Sam Noble
	<ns@shadow.org>

2001-05-25  jeff b  <jeff@univrel.pr.uconn.edu>
	* etc/uams/uams_passwd.c: another Tru64 fix from Burkhard
	Schmidt <bs@cpfs.mpg.de>

	* configure.in, contrib/shell_utils/Makefile.am,
	contrib/shell_utils/afpd-mtab.pl, doc/Makefile.am,
	doc/COPYRIGHT.mtab, doc/README.mtab, doc/README.mtab.distribution,
	etc/afpd/.cvsignore, etc/afpd/Makefile.am, etc/afpd/parse_mtab.c,
	etc/afpd/parse_mtab.h, test_parse_mtab.c: experimental mtab
	code from Bob Rogers to generate more persistant DIDs

2001-05-22  jeff b  <jeff@univrel.pr.uconn.edu>
	* configure.in, etc/afpd/unix.h: more portability fixes, and
	integration of Tru64 build fix from Edmund Lam <epl@unimelb.edu.au>

	* configure.in, bin/megatron/Makefile.am,
	distrib/initscripts/Makefile.am, etc/afpd/main.c,
	etc/afpd/quota.c, etc/afpd/unix.h,
	etc/uams/uams_dhx_passwd.c, etc/uams/uams_passwd.c: Another
	round of Tru64 patches from Burkhard Schmidt <bs@cpfs.mpg.de>

2001-05-09  jeff b  <jeff@univrel.pr.uconn.edu>
	* autogen.sh: added automake --include-deps to autogen.sh to
	promote more portable Makefiles (thanks to Christian
	Weisgerber <naddy@mips.inka.de> from OpenBSD)

2001-05-08  jeff b  <jeff@univrel.pr.uconn.edu>

	* bin/megatron/Makefile.am, etc/uams/Makefile.am: small Makefile fixes
	from Olaf Hering <olh@suse.de>

	* etc/uams/uams_dhx_passwd.c: Tru64 fixes from Burkhard Schmidt
	<bs@cpfs.mpg.de>

2001-05-07  jeff b  <jeff@univrel.pr.uconn.edu>

	* contrib/shell_utils/netatalkshorternamelinks.pl: added script to
	shorten names

	* etc/afpd/quota.c, etc/uams/uams_passwd.c: patches from Burkhard
	Schmidt <bs@cpfs.mpg.de> to fix typos
