@@ -6,6 +6,7 @@
 #undef BSD4_4
 #undef DEBUG
 #undef DLSYM_PREPEND_UNDERSCORE
+#undef DID_MTAB
 #undef DISABLE_SHELLCHECK
 #undef DROPKLUDGE
 #undef FHS_COMPATIBILITY
