@@ -1,4 +1,4 @@
-dnl $Id: configure.in,v 1.80 2001-06-05 12:51:17 pooba53 Exp $
+dnl $Id: configure.in,v 1.81 2001-06-06 13:36:36 rufustfirefly Exp $
 dnl configure.in for netatalk
 
 AC_INIT(bin/adv1tov2/adv1tov2.c)
@@ -162,19 +162,21 @@ AC_ARG_WITH(config-dir,
 
 AC_ARG_WITH(cracklib,
 	[  --with-cracklib=dict    enable/set location of cracklib dictionary],
-	cracklib="$withval"
-	AC_CHECK_LIB(crack, main,
-		AC_DEFINE(USE_CRACKLIB) 
-		LIBS="$LIBS -lcrack"
-		AC_MSG_RESULT([enabling cracklib support])
-		if test "$cracklib" = "yes"; then
-			cracklib="/usr/lib/cracklib_dict"
-		fi
-		AC_DEFINE_UNQUOTED(_PATH_CRACKLIB, "$cracklib",
-			[path to cracklib dictionary])
-		AC_MSG_RESULT([setting cracklib dictionary to $cracklib]),
-		AC_MSG_ERROR([cracklib not found!])
-	)
+	if test "x$withval" != "xno" ; then
+		cracklib="$withval"
+		AC_CHECK_LIB(crack, main,
+			AC_DEFINE(USE_CRACKLIB) 
+			LIBS="$LIBS -lcrack"
+			AC_MSG_RESULT([enabling cracklib support])
+			if test "$cracklib" = "yes"; then
+				cracklib="/usr/lib/cracklib_dict"
+			fi
+			AC_DEFINE_UNQUOTED(_PATH_CRACKLIB, "$cracklib",
+				[path to cracklib dictionary])
+			AC_MSG_RESULT([setting cracklib dictionary to $cracklib]),
+			AC_MSG_ERROR([cracklib not found!])
+		)
+	fi
 )
 
 AC_ARG_ENABLE(ddp,
@@ -223,11 +225,17 @@ AC_ARG_ENABLE(force-uidgid,
 	fi
 )
 
-AC_ARG_ENABLE(lastdid,
-	[  --enable-lastdid        enable build without DID dev/inode mapping kludge],
-	if test "$enableval" = "yes"; then 
-		AC_DEFINE(USE_LASTDID, 1)
-		AC_MSG_RESULT([enabling build without DID dev/inode mapping kludge])
+AC_ARG_ENABLE(did,
+	[  --with-did=[scheme]      set DID scheme (last,mtab)],
+	if test "x$withval" != "xno" ; then
+		if test "$withval" = "lastdid"; then 
+			AC_DEFINE(USE_LASTDID, 1)
+			AC_MSG_RESULT([enabling build without DID dev/inode mapping kludge])
+		fi
+		if test "$withval" = "mtab"; then 
+			AC_DEFINE(DID_MTAB, 1)
+			AC_MSG_RESULT([enabling mtab-based DID creation support])
+		fi
 	fi
 )
 
@@ -239,7 +247,7 @@ AC_ARG_WITH(message-dir,
 			msg_dir="${prefix}/etc/msg"
 		fi
 		AC_DEFINE_UNQUOTED(SERVERTEXT, "$msg_dir",
-			[path to message dir [default=$ac_default_prefix/etc/msg]])
+			[path to message dir [default=$ac_prefix_default/etc/msg]])
 		SERVERTEXT="$msg_dir"
 		AC_SUBST(SERVERTEXT)
 )
@@ -361,7 +369,7 @@ AC_MSG_RESULT([setting configuration files location to $CONFIG_DIR])
 
 ***** UAMS_PATH
 AC_DEFINE_UNQUOTED(UAMS_PATH, "${uams_path}",
-	[path to UAMs [default=$ac_default_prefix/etc/uams]])
+	[path to UAMs [default=$ac_prefix_default/etc/uams]])
 UAMS_PATH="${uams_path}"
 AC_SUBST(UAMS_PATH)
 
